--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="logreg-box">
             <div class="form-box login">
-                <form action="#" id="myform">
+                <form action="#" id="myForm">
                     <h2>पंजीकरण</h2>
                     <div class="input-box">
                         <span class="icon"><i class='bx bxs-edit-alt' ></i></span>
